fixed jumping prgress bar

--- a/src/assets/styles/progress-bar.css
+++ b/src/assets/styles/progress-bar.css
@@ -1,6 +1,10 @@
 :root {
     --duration: 0;
 }
+.bar {
+    width: 80%;
+    height: 2em;
+}
 
 .progress-bar-text {
     color: white;
@@ -13,7 +17,6 @@
 }
 
 .round-time-bar {
-    width: 80%;
     height: 2em;
     position: relative;
     margin: 1rem;
@@ -26,13 +29,7 @@
     animation: roundtime calc(var(--duration) * 1s) steps(var(--duration))
         backwards;
     transform-origin: center;
-    background: rgb(0, 255, 0);
-    background: linear-gradient(
-        90deg,
-        rgba(0, 255, 0, 1) 0%,
-        rgba(255, 0, 0, 1) 50%,
-        rgba(0, 255, 0, 1) 100%
-    );
+
     background: linear-gradient(
         90deg,
         var(--primary-active) 0%,
